--- a/style.css
+++ b/style.css
@@ -1,46 +1,75 @@
-h1 {
-  font-size: 24px;
-  text-transform: uppercase;
-  font-style: italic;
-  font-family: 'William', serif;
-  margin-bottom: 0;
-  margin-top: 0;
-  padding-top: 34px; 
+@font-face {
+  src: url(https://code.s3.yandex.net/web-code/fonts/SuisseIntl-Book.woff);
+  font-family: 'Suisse';
   font-weight: normal;
-  color: white;
 }
 
-h2 {
-  margin-top: 0;
-  margin-bottom: 24px;
-  font-size: 30px;
-  text-transform: uppercase;
-  font-family: 'Inter', sans-serif;
-  color: white;
+@font-face {
+  src: url(https://code.s3.yandex.net/web-code/fonts/SuisseIntl-Bold.woff
+);
+  font-family: 'Suisse';
+  font-weight: bold;
 }
 
-img {
-  width: 230px;
-  margin-bottom: 50px
-}
-
-p {
-  font-family: 'Inter', sans-serif;
-  text-align: center;
-}
-div {
-  text-align: center;
-  width: 500px;
-  height: 500px;
-  background-color:mediumaquamarine;
-  margin: auto;
-}
-h3 {
-  font-family: 'William', serif;
+html {
+  height: 100%;
   margin: 0;
-  font-size: 15px;
-  text-transform: uppercase;
-  line-height: 18px;
-  font-weight: normal;
-  color: white;
+  -webkit-font-smoothing: antialiased;
 }
+
+body {
+  background-color: #323131;
+  color: white;
+  max-width: 540px;
+  height: 100%;
+  margin: 0 auto;
+  font-family: 'Suisse';
+  box-sizing: border-box;
+  padding: 36px;
+  max-height: 100vh;
+}
+
+.header {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+.logo {
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.button {
+  width: 130px;
+  height: 40px;
+  padding-top: 10px;
+  box-sizing: border-box;
+  border: 1px solid white;
+  text-align: center;
+  font-size: 14px;
+  cursor: pointer;
+  transition: opacity 0.2s;
+}
+
+.button:hover {
+  opacity: 0.5;
+}
+
+.image {
+  width: 100%;
+  display: block;
+  margin: 70px auto 60px;
+}
+
+.advice {
+  font-size: 42px;
+  font-weight: bold;
+  line-height: 1.1;
+}
+
+.footer {
+  font-size: 16px;
+  margin-top: 70px;
+}
+
